--- a/sign-up.css
+++ b/sign-up.css
@@ -1,1 +1,49 @@
+body{
+    background-color: #c2c5aa;
+}
+.sing_up {
+    width: 400px;
+    height: 80vh;
+    background-color: #414833;
+    margin: auto;
+    border: 3px solid rgb(78, 72, 72);
+    border-radius: 10px;
+    margin-top: 3em;
+}
+h1{
+    text-align: center;
+    padding-top: 1em;
+}
+form{
+    width: 90%;
+    margin-inline: 5px;
+    color: #a7c957;
+}
+form label{
+    display: flex;
+}
+form input{
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border: 1px solid gray;
+    outline: none;
+    border-radius: 10px;
+}
+input[type="submit"],
+input[type="reset"]{
+    width: 100%;
+    height: 35px;
+    margin: 10px;
+    background-color: #b6ad90;
+    padding-inline: 5px;
+    cursor: pointer;
 
+
+}
+p{
+    text-align: center;
+}
+a{
+    color: #b6ad90;
+}
