--- a/log.css
+++ b/log.css
@@ -1,13 +1,19 @@
-.login{
+h1 {
+    text-align: center;
+    font-size: 60px;
+}
+.container{
+    display: flex;
+    flex-direction: column;
     background-color: #414833;
-    width: 400px;
-    height: 80vh;
+    width: 510px;
+    height: 60vh;
     margin: auto;
     border: 3px solid rgb(78, 72, 72);
     border-radius: 10px;
     margin-top: 3em;
 }
-.login input{
+.container input{
     margin: 7px;
     width: 100%;
     padding: 10px;
@@ -15,6 +21,11 @@
     border: 1px solid gray;
     outline: none;
     border-radius: 10px;
+    align-self: stretch;
+}
+.email,
+.password {
+    font-size: 25px;
 }
 p{
     text-align: center;
@@ -23,18 +34,4 @@ a{
     color: #b6ad90;
 }
 
-.Pass{
-    display: flex;
-    align-items: center;
-
-}
-.Pass input{
-    width: 100%;
-
-    
-}
-.Pass img{
-    width: 20px;
-    height: 20px;
-}
 
