--- a/log.css
+++ b/log.css
@@ -1,3 +1,6 @@
+body{
+    background-color: #c2c5aa;
+}
 .login{
     background-color: #414833;
     width: 400px;
@@ -21,20 +24,5 @@ p{
 }
 a{
     color: #b6ad90;
-}
-
-.Pass{
-    display: flex;
-    align-items: center;
-
-}
-.Pass input{
-    width: 100%;
-
-    
-}
-.Pass img{
-    width: 20px;
-    height: 20px;
 }
 
