--- a/log.css
+++ b/log.css
@@ -5,6 +5,7 @@ h1 {
 .container{
     display: flex;
     flex-direction: column;
+    align-items: stretch;
     background-color: #414833;
     width: 510px;
     height: 60vh;
@@ -17,8 +18,7 @@ h1 {
     margin: 7px;
     width: 100%;
     padding: 10px;
-    border: none;
-    border: 1px solid gray;
+    border: 1px solid transparent;
     outline: none;
     border-radius: 10px;
     align-self: stretch;
