--- a/log.css
+++ b/log.css
@@ -15,7 +15,7 @@ h1 {
 .container {
     position: relative;
     width: 510px;
-    height: 55vh;
+    height: 60vh;
     display: flex;
     flex-direction: column;
     background-color: white;
@@ -66,6 +66,10 @@ p {
     position: relative;
     text-align: center;
     top: -5px;
+}
+.forget {
+    position: relative;
+    text-align: center;
 }
 #email:focus ~ .email,
 #email:valid ~ .email,
