--- a/Contact.css
+++ b/Contact.css
@@ -2,7 +2,7 @@ body{
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    background-color: #faa300;
+    background-color: #faa200de;
 }
 h2 {
     position: relative;
