--- a/log.css
+++ b/log.css
@@ -20,9 +20,10 @@ h1 {
     height: 70vh;
     display: flex;
     flex-direction: column;
-    background-color: white;
+    background-color: transparent;
     margin: 20px auto;
     top: 155px;
+    border: 2px solid black;
     border-radius: 15px;
     padding: 10px;
     box-shadow: 3px 3px 15px 1px;
@@ -41,9 +42,6 @@ input {
     padding: 10px;
     margin-bottom: 15px;
     outline: none;
-    /* border-top: transparent;
-    border-right: transparent;
-    border-left: transparent; */
     border-radius: 15px;
     transition-timing-function: ease-out;
     transition-duration: 0.3s;
