--- a/Contact.css
+++ b/Contact.css
@@ -3,7 +3,7 @@ body{
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     /* background-color: #faa200de; */
-    background-image: url(ph.jpg);
+    background-image: url(background2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
