--- a/Contact.css
+++ b/Contact.css
@@ -95,6 +95,7 @@ form {
     text-transform: capitalize;
     box-shadow: 3px 3px 15px 1px;
     border-radius: 15px;
+    z-index: 10;
 }
 /* specify the place of boxes */
 input,
