--- a/sign-up.css
+++ b/sign-up.css
@@ -1,49 +1,85 @@
-body{
-    background-color: #c2c5aa;
+*{
+    margin: o;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
 }
-.sing_up {
-    width: 400px;
-    height: 80vh;
-    background-color: #414833;
-    margin: auto;
-    border: 3px solid rgb(78, 72, 72);
-    border-radius: 10px;
-    margin-top: 3em;
+body {
+background-color: #f2f2f2;
+align-items: center;
+display: flex;
+justify-content: center;
+min-height: 100vh;
+}
+
+.sign-up{
+padding: 2rem;
+width: 100%;
+max-width: 400px;
+box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+background-color: white;
+border-radius: 8px;
 }
 h1{
     text-align: center;
-    padding-top: 1em;
+    margin-bottom: 1.5rem;
+    color: #333;
+    font-size: 1.8rem;
 }
-form{
-    width: 90%;
-    margin-inline: 5px;
-    color: #a7c957;
+
+.groub{
+    margin-bottom: 1.2rem;
 }
-form label{
-    display: flex;
-}
+
+form labal{
+    display: block;
+    margin-bottom: .5rem;
+    color: #666;
+    font-weight: bold;
+
+} 
+
 form input{
-    width: 100%;
-    padding: 10px;
-    border: none;
-    border: 1px solid gray;
-    outline: none;
-    border-radius: 10px;
+width: 100%;
+padding: .8rem;
+border: 1px solid #ddd;
+border-radius: 4px;
+font-size: 1rem;
 }
-input[type="submit"],
-input[type="reset"]{
+select{
     width: 100%;
-    height: 35px;
-    margin: 10px;
-    background-color: #b6ad90;
-    padding-inline: 5px;
-    cursor: pointer;
-
-
+padding: .8rem;
+border: 1px solid #ddd;
+border-radius: 4px;
+font-size: 1rem;
 }
 p{
-    text-align: center;
+    font-size: .8rem;
+    color: #666;
+    margin-top: .3rem;
 }
-a{
-    color: #b6ad90;
+button{
+    width: 100%;
+    padding: 1rem;
+    background-color: #007bff;
+    border:none;
+    border-radius: 4px;
+    font-size: 1rem;
+    margin-top: 1rem;
+    color: white;
+    cursor: pointer;
+}
+button:hover {
+    background-color: #0056b3;
+}
+span{
+    font-size: 1rem;
+    font-weight: normal;
+}
+.status a {
+color: #007bff;
+text-decoration: none;
+}
+.status a:hover {
+    text-decoration: underline;
 }
