--- a/log.css
+++ b/log.css
@@ -4,12 +4,70 @@
     box-sizing: border-box;
 }
 body {
-    background-image: url(background.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: #F0BB78;
     color: white;
     display: flex;
     flex-direction: column;
+    z-index: 0;
+}
+.background {
+    padding: 0;
+    top: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    height: 200px;
+    background-color: #4E1F00;
+    z-index: 2;
+}
+.navbar{
+    margin: 10px;
+    padding-inline: 15px;
+    position: relative;
+    z-index: 10;
+}
+.navdiv{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+.logo{
+    margin-top: 10px;
+}
+.logo a{
+    color: aliceblue;
+    font-size: 70px;
+    text-decoration: none;
+}
+li{
+    list-style: none;
+    display: inline-block;
+}
+li a{
+    padding-top: 10px;
+    color: white;
+    font-size: 12px;
+    font-weight: bold;
+    margin-right: 40px;
+}
+.button_signUp,
+.button_login{
+    background-color: rgba(0, 0, 0, 0);
+    margin: 20px ;
+    padding: 10px;
+    border: 2px solid rgba(255, 255, 255, 0.788);
+    border-radius: 10px;
+    width: 160px;
+    top: 0;
+}
+button a{
+    color: white;
+    letter-spacing: 2px;
+    font-weight: bold;
+    font-size: 15px;
+    font-family: "Varela Round", sans-serif;
+    text-decoration: none;
 }
 h1 {
     text-align: center;
@@ -33,14 +91,15 @@ h2 {
     height: 61vh;
     display: flex;
     flex-direction: column;
-    background-color: transparent;
+    background-color: #F0BB78;
     margin: 20px auto;
-    top: 70px;
+    top: 145px;
     border: 2px solid black;
     border-radius: 15px;
     padding: 10px;
-    box-shadow: 3px 3px 15px 1px;
+    box-shadow: 3px 3px 15px 1px black;
     text-transform: capitalize;
+    z-index: 2;
 }
 form {
     height: 450px;
@@ -86,6 +145,8 @@ button {
     font-size: 20px;
     text-transform: capitalize;
     top: 20px;
+    color: white;
+    background-color: #4E1F00;
 }
 p {
     position: relative;
@@ -98,12 +159,12 @@ p {
     top: -81px;
 }
 button:hover {
-    background-color: #0000ffa1;
     cursor: pointer;
+    background-color: #4e1f00d7;
 }
 .sign-up,
 .forget {
-    color: blue;
+    color: #4E1F00;
 }
 /* Mobile */
 
@@ -180,33 +241,5 @@ button:hover {
     }
     p {
         top: 40px;
-    }
-}
-.circle1 ,
-.circle2 ,
-.circle3 ,
-.circle4 ,
-.circle5 ,
-.circle6 ,
-.circle7 ,
-.circle8 ,
-.circle9 ,
-.circle10 ,
-.circle11 ,
-.circle12  {
-
-
-    animation-name: animation;
-    animation-duration: 4s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-}
-@keyframes animation{
-    form{
-        transform: rotatey(0deg);
-
-    }
-    to{
-        transform: rotatey(360deg);
     }
 }
