--- a/sign-up.css
+++ b/sign-up.css
@@ -1,57 +1,118 @@
 *{
-    margin: o;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
 }
 body {
-background-color: #f2f2f2;
+background-color: #F0BB78;
 align-items: center;
 display: flex;
 justify-content: center;
 min-height: 100vh;
+z-index: 0;
 }
+.background {
+    top: 0;
+    position: absolute;
+    width: 100%;
+    height: 200px;
+    background-color: #4E1F00;
+    z-index: 2;
+}
+.navbar{
+    margin: 10px;
+    padding-inline: 15px;
+    position: relative;
+    z-index: 10;
+}
+.navdiv{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
+}
+.logo{
+    margin-top: 10px;
+}
+.logo a{
+    color: aliceblue;
+    font-size: 70px;
+    text-decoration: none;
+}
+li{
+    list-style: none;
+    display: inline-block;
+}
+li a{
+    padding-top: 10px;
+    color: white;
+    font-size: 12px;
+    font-weight: bold;
+    margin-right: 40px;
+}
+.button_signUp,
+.button_login{
+    background-color: rgba(0, 0, 0, 0);
+    margin: 20px ;
+    padding: 10px;
+    border: 2px solid rgba(255, 255, 255, 0.788);
+    border-radius: 10px;
+    width: 160px;
+}
+button a{
+    color: white;
+    letter-spacing: 2px;
+    font-weight: bold;
+    font-size: 15px;
+    font-family: "Varela Round", sans-serif;
+    text-decoration: none;
+}
 .sign-up{
-padding: 2rem;
-width: 100%;
-max-width: 400px;
-box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-background-color: white;
-border-radius: 8px;
+    padding: 32px;
+    width: 100%;
+    max-width: 400px;
+    background-color: #F0BB78;
+    border: 2px solid black;
+    border-radius: 15px;
+    padding: 10px;
+    box-shadow: 3px 3px 15px 1px;
+    text-transform: capitalize;
+    z-index: 3;
 }
 h1{
     text-align: center;
-    margin-bottom: 1.5rem;
-    color: #333;
-    font-size: 1.8rem;
+    margin-bottom: 24px;
+    color: white;
+    font-size: 60px;
 }
 
-.groub{
-    margin-bottom: 1.2rem;
+.group{
+    margin-bottom: 19px;
 }
-
-form labal{
+input:placeholder-shown {
+    text-transform: capitalize;
+}
+form label{
     display: block;
-    margin-bottom: .5rem;
+    margin-bottom: 8px;
     color: #666;
     font-weight: bold;
-
 } 
 
 form input{
 width: 100%;
-padding: .8rem;
+padding: 13px;
 border: 1px solid #ddd;
-border-radius: 4px;
-font-size: 1rem;
+border-radius: 15px;
+font-size: 16px;
 }
 select{
     width: 100%;
-padding: .8rem;
+padding: 13px;
 border: 1px solid #ddd;
-border-radius: 4px;
-font-size: 1rem;
+border-radius: 15px;
+font-size: 16px;
 }
 p{
     font-size: .8rem;
@@ -60,25 +121,29 @@ p{
 }
 button{
     width: 100%;
-    padding: 1rem;
-    background-color: #007bff;
+    padding: 16px;
+    background-color: #4E1F00;
     border:none;
-    border-radius: 4px;
-    font-size: 1rem;
-    margin-top: 1rem;
+    border-radius: 15px;
+    font-size: 16px;
+    margin-top: 16px;
     color: white;
     cursor: pointer;
+    text-transform: capitalize;
 }
 button:hover {
-    background-color: #0056b3;
+    background-color: #4e1f00d7;
 }
 span{
-    font-size: 1rem;
+    font-size: 16px;
     font-weight: normal;
 }
+.status {
+    text-transform:none;
+    color: white;
+}
 .status a {
-color: #007bff;
-text-decoration: none;
+color: #4E1F00;
 }
 .status a:hover {
     text-decoration: underline;
