--- a/Cart.css
+++ b/Cart.css
@@ -36,6 +36,7 @@
 .logo a{
     color: aliceblue;
     font-size: 40px;
+    text-decoration: none;
 }
 li{
     list-style: none;
@@ -47,6 +48,7 @@ li a{
     font-size: 12px;
     font-weight: bold;
     margin-right: 40px;
+    text-decoration: none;
 }
 .button_signUp,
 .button_login{
