--- a/menu.css
+++ b/menu.css
@@ -35,6 +35,7 @@ li a{
     font-size: 12px;
     font-weight: bold;
     margin-right: 40px;
+    text-decoration: none;
 }
 .button_signUp,
 .button_login{
