--- a/Cart.css
+++ b/Cart.css
@@ -1,5 +1,11 @@
 /* Cart.css */
 /* Consistent Navbar Styles */
+body {
+    font-family: "Montserrat", sans-serif;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
 .background {
     padding: 0;
     top: 0;
