--- a/about.css
+++ b/about.css
@@ -12,7 +12,6 @@ body{
 
 }
 .name{
- 
     text-align: center;
     font-size: 1.5rem;
     text-transform: uppercase;
@@ -118,7 +117,6 @@ section a{
     line-height: 1.9;
     font-size: 17px;
     letter-spacing: 1px;
- 
 }
 .descr h4{
     line-height: 1.5;
@@ -132,7 +130,6 @@ h5{
     margin: 3px;
     font-size: 40px;
 }
-/* media query */
 *{
     text-decoration: none;
     margin: 0;
@@ -149,53 +146,7 @@ body{
     font-size: 1.5rem;
     text-transform: uppercase;
 }
-/* nav */
-.navbar{
-    margin: 10px;
-    padding-inline: 15px;
-    position: relative;
-    z-index: 10;
-}
-.navdiv{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.logo{
-    margin-top: 10px;
-}
-.logo a{
-    color: aliceblue;
-    font-size: 40px;
-}
-li{
-    list-style: none;
-    display: inline-block;
-}
-li a{
-    padding-top: 10px;
-    color: white;
-    font-size: 12px;
-    font-weight: bold;
-    margin-right: 40px;
-    text-decoration: none;
-}
-.button_signUp,
-.button_login{
-    background-color: rgba(0, 0, 0, 0);
-    margin: 20px ;
-    padding: 10px;
-    border: 2px solid rgba(255, 255, 255, 0.788);
-    border-radius: 10px;
-    width: 160px;
-}
-button a{
-    color: white;
-    letter-spacing: 2px;
-    font-weight: bold;
-    font-size: 15px;
-    font-family: "Varela Round", sans-serif;
-}
+
 /* section */
 .description{
     position: relative;
@@ -219,7 +170,7 @@ section a{
 .container{
     background-color: rgba(0, 0, 0, .6);
     width: 100%;
-    height: 125%;
+    height: 100%;
 }
 .open_lay{
     width: 100%;
@@ -264,7 +215,9 @@ h5{
 
 /* Media Queries */
 @media screen and (max-width: 1200px) {
-
+    body {
+        height: 99vh;
+    }
     .descr {
         width: 70%;
         top: 300px;
@@ -273,7 +226,7 @@ h5{
 
 @media screen and (max-width: 768px) {
     body{
-        height: 80vh;
+        height: 99vh;
     }
     .navbar {
         padding-inline: 5px;
