--- a/log.css
+++ b/log.css
@@ -2,6 +2,7 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    font-family: "Montserrat", sans-serif;
 }
 body {
     background-color: #F0BB78;
